--- a/src/Components/HeaderComponents/NavigationComponets/NavigationMedia.css
+++ b/src/Components/HeaderComponents/NavigationComponets/NavigationMedia.css
@@ -1,375 +1,118 @@
-
 @media (min-width: 260px) {
-    .nav-outer{    
+    .nav-outer {
         height: 5rem;
         width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
+        
+      }
+    
+      .link-list li {
         margin: 0rem 0.2rem;
-        padding: 0.3rem 0.5rem;  
-    }
-    .link-list li a{
-        font-size: 1.2rem;
-    }
+        padding: 0.5rem 0.6rem;
+      }
+    
+      .link-list li a {
+        font-size: 1.1rem;
+      }
 }
 
-@media (min-width: 275px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 0.5rem;  
-    }
-    .link-list li a{
-        font-size: 1.2rem;
-    }
-}
-@media (min-width: 280px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
+@media (min-width: 320px) {
+  .nav-outer {
+    height: 5rem;
+    width: 100%;
     
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 0.5rem;  
-    }
-    .link-list li a{
-        font-size: 1.2rem;
-    }
-}
-@media (min-width: 300px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 0.5rem;  
-    }
-    .link-list li a{
-        font-size: 1.2rem;
-    }
-}
-@media (min-width: 310px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 0.5rem;  
-    }
-    .link-list li a{
-        font-size: 1.2rem;
-    }
-}
-@media (min-width: 345px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1rem;  
-    }
-    .link-list li a{
-        font-size: 1.3rem;
-    }
-}
-@media (min-width: 354px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1rem;  
-    }
-    .link-list li a{
-        font-size: 1.3rem;
-    }
-}
-@media (min-width: 360px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1rem;  
-    }
-    .link-list li a{
-        font-size: 1.3rem;
-    }
-}
-@media (min-width: 370px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1rem;  
-    }
-    
-    .link-list li a{
-        font-size: 1.3rem;
-    }
-}
-@media (min-width: 375px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1rem;  
-    }
-    
-    .link-list li a{
-        font-size: 1.3rem;
-    }
+  }
+
+  .link-list li {
+    margin: 0rem 0.2rem;
+    padding: 0.5rem 1rem;
+  }
+
+  .link-list li a {
+    font-size: 1.2rem;
+  }
 }
 @media (min-width: 400px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1rem;  
-    }
+  .nav-outer {
+    height: 5rem;
+    width: 100%;
     
-    .link-list li a{
-        font-size: 1.3rem;
-    }
-}
-@media (min-width: 500px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1rem;  
-    }
-    
-    .link-list li a{
-        font-size: 1.3rem;
-    }
-}
-@media (min-width: 600px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1.6rem;  
-        /* border:1px solid red; */
+  }
 
-    }
-    
-    .link-list li a{
-        font-size: 1.3rem;
-        
-    }
-}
-@media (min-width: 645px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    ul {
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.2rem;
-        padding: 0.3rem 1.6rem;  
-        /* border:1px solid red; */
+  .link-list li {
+    margin: 0rem 0.2rem;
+    padding: 0.5rem 1.1rem;
+  }
 
-    }
-    
-    .link-list li a{
-        font-size: 1.3rem;
-    }
+  .link-list li a {
+    font-size: 1.2rem;
+  }
 }
-@media (min-width: 768px) {
-    .nav-outer{    
-        height: 5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    
-    ul {
-      
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.3rem;
-        padding: 0.3rem 1.5rem;  
-    }
-    
-    .link-list li a{
-        font-size: 1.4rem;
-    }
-}
-@media (min-width: 1024px) {
-    .nav-outer{    
-        height: 5.5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    
-    ul {
-      
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.4rem;
-        padding: 0.3rem 1.5rem;  
-    }
-    
-    .link-list li a{
-        font-size: 1.4rem;
-    }
-}
-@media (min-width: 1280px) {
-    .nav-outer{    
-        height: 5.5rem;
-        width: 100%;
-        /* border:1px solid red; */
-    }
-    
-    ul {
-      
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.4rem;
-        padding: 0.3rem 1.5rem;  
-    }
-    
-    .link-list li a{
-        font-size: 1.4rem;
-    }
-}
-@media (min-width: 1536px) {
-    .nav-outer{    
-        height: 5.5rem;
-        width: 99vw;
-    }
 
-    ul {
-        margin: 0.2rem 0rem;
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.5rem;
-        padding: 0.5rem 2rem; 
-    }
-    
-    .link-list li a{
-        font-size: 1.5rem;
-    }
-   
-    
-}
-@media (min-width: 1550px) {
-    .nav-outer{    
-        height: 5.5rem;
-        width: 99vw;
-    }
+@media (min-width: 481px) {
+  .nav-outer {
+    height: 5rem;
+    width: 100%;
+  }
 
-    ul {
-        margin: 0.2rem 0rem;
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.5rem;
-        padding: 0.5rem 2rem; 
-    }
-    
-    .link-list li a{
-        font-size: 1.5rem;
-    }
-   
-    
-}
-@media (min-width:  1600px) {
-    .nav-outer{    
-        height: 5.5rem;
-        width: 99vw;
-    }
+  .link-list li {
+    margin: 0rem 0.2rem;
+    padding: 0.5rem 1.4rem;
+  }
 
-    ul {
-        margin: 0.2rem 0rem;
-        padding: 0.5rem;
-    }
-    .link-list li{
-        margin: 0rem 0.5rem;
-        padding: 0.5rem 2rem; 
-    }
-    
-    .link-list li a{
-        font-size: 1.5rem;
-    }
-   
-    
+  .link-list li a {
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 790px) {
+  .nav-outer {
+    height: 5rem;
+    width: 100%;
+    /* border:1px solid rgb(253, 62, 3) ; */
+  }
+
+  .link-list li {
+    margin: 0rem 0.2rem;
+    padding: 0.5rem 1.8rem;
+  }
+
+  .link-list li a {
+    font-size: 1.1rem;
+  }
+}
+
+@media (min-width: 1025px) {
+  .nav-outer {
+    height: 6rem;
+    width: 100%;
+  }
+  ul {
+    margin-top: 1rem;
+  }
+  .link-list li {
+    margin: 0rem 0.2rem;
+    padding: 0.5rem 1.8rem;
+  }
+
+  .link-list li a {
+    font-size: 1.2rem;
+  }
+}
+@media (min-width: 1201px) {
+  .nav-outer {
+    height: 6rem;
+    width: 99vw;
+  }
+
+  ul {
+    margin-top: 1rem;
+  }
+  .link-list li {
+    margin: 0rem 0.2rem;
+    padding: 0.5rem 2.2rem;
+  }
+
+  .link-list li a {
+    font-size: 1.4rem;
+  }
 }
