--- a/src/Components/FooterComponents/FooterMedia.css
+++ b/src/Components/FooterComponents/FooterMedia.css
@@ -62,6 +62,23 @@
   
 }
 
+@media (min-width: 945px) {
+    .footer-text-box{
+        height: 6vh;
+        width: 100%;
+        padding: 1rem 0rem;
+    }
+    .footer-text-box span {
+        color:#fafafc;
+        font-weight: 400;
+        font-size: 1rem;
+        letter-spacing: 1px;
+    }
+    .heart-icone{
+        font-size: 1rem;
+    }
+
+}
 @media (min-width: 1025px) {
     .footer-text-box{
         height: 6vh;
